@@ -103,4 +103,38 @@ function imcms_encryptPass($adminpass, $adminsalt, $mainSalt)
 	return $pass;
 }
 // ----- End New Password System
+/**
+ * Recursively delete a directory
+ *
+ * @param string $dir Directory name
+ * @param boolean $deleteRootToo Delete specified top-level directory as well
+ */
+function unlinkRecursive($dir, $deleteRootToo=true)
+{
+    if(!$dh = @opendir($dir))
+    {
+        return;
+    }
+    while (false !== ($obj = readdir($dh)))
+    {
+        if($obj == '.' || $obj == '..')
+        {
+            continue;
+        }
+
+        if (!@unlink($dir . '/' . $obj))
+        {
+            unlinkRecursive($dir.'/'.$obj, true);
+        }
+    }
+
+    closedir($dh);
+   
+    if ($deleteRootToo)
+    {
+        @rmdir($dir);
+    }
+   
+    return;
+} 
 ?>
